fix logo display (align and background color)

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   height: 100vh;
 }
 
+.App-logo-fix {
+  text-align: center;
+  background-color: #222;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
